<resources>
    <string name="app_name">Daily</string>
    <string name="created">Created:</string>
    <string name="modified">Modified:</string>
    <string name="closeDrawer">Close drawer</string>
    <string name="openDrawer">Open drawe</string>
    <string name="positiveBtnTxt">Positive</string>
    <string name="negativeBtnTxt">Negative</string>
    <string name="location">Location</string>
    <string name="search_note_hint">Search note</string>
    <string name="todo">TODO</string>
    <string name="write_note">Write note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="reminder">Reminder</string>
    <string name="at">at:</string>
    <string name="today">Today</string>
    <string name="ok">Ok</string>
    <string name="city_name">City name</string>
    <string name="cancel">cancel</string>
    <string name="At">At: </string>
    <string name="dialog_delete">Delete</string>
    <string name="Dialog_cancel">Cancel</string>
    <string name="dialog_delete_note">Delete note?</string>
    <string name="dialog_delete_note_desc">Do you really  want to delete this note?</string>
    <string name="toast_delete_succes">Deleted successfully</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="toast_exit_app">Please press back button again to exit app</string>
    <string name="invalid_location">Invalid Location</string>
    <string name="invalid_name_toast">Invalid city name, please enter a valid city name</string>
    <string name="dialog_ok">OK</string>
    <string name="enter_city_name">Please enter city name</string>
    <string name="open_it">Open it</string>
    <string name="tap_for_more">Tap for more!</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="save">Done</string>
    <string name="sort_date">Date</string>
    <string name="sort_name">Name</string>
    <string name="send_mail">Send Email</string>
    <string name="mail_feedback">Mail Feedback</string>
    <string name="call">Call</string>
    <string name="connect_dev">connecting with developer:</string>
    <string name="about_daily">About Daily</string>
    <string name="please_enter_city_name">Please enter a city name</string>
    <string name="weaLang">en</string>
    <string name="dgree_notesFragment" translatable="false">%1$s°</string>
    <string name="reminder_btn_addNoteFragment">Reminder</string>
    <string name="textView_remindat">Remind at</string>
    <string name="addrReminder_addNoteFragment">Add reminder</string>
    <string name="ptp_time">Set reminder time</string>
    <string name="pdp_date">Set reminder date</string>
    <string name="txt_minutes_ago">"%1$s minutes ago"</string>
    <string name="txt_hours_ago">"%1$s hours ago"</string>
    <string name="txt_today">"Today %1$s"</string>
    <string name="txt_xreated">"Created: %1$s"</string>
    <string name="txt_modified">"Modified: %1$s"</string>
    <string name="sort_list">Sort Notes</string>
    <string name="deleteNoteTitle_warning">WARNING!</string>
    <string name="deleteNoteTitle_description">Do you really want to delete this note?</string>
    <string name="orderDialog_byName">By Name</string>
    <string name="orderDialog_byDate">By Date</string>
    <string name="orderDialog_asc">Ascending</string>
    <string name="orderDialog_dsc">Descending</string>
    <string name="orderDialog_submitBtn">OK</string>
    <string name="orderDialog_cancelBtn">Cancel</string>
    <string name="timePickerDialog_submitBtn">Next</string>
    <string name="timePickerDialog_cancelBtn">Cancel</string>
    <string name="datePickerDialog_submitBtn">Ok</string>
    <string name="datePickerDialog_cancelBtn">Cancel</string>
    <string name="noNotes_notestFragment_text">You have no notes yet</string>
    <string name="search_note">Search note</string>
    <string name="settings_themetv">Theme</string>
    <string name="settings_systemdefault">System default</string>
    <string name="settings_report">Feedback</string>
    <string name="settings_reportbug">Report a bug</string>
    <string name="settings_sendemail">Send e-mail</string>
    <string name="settings_contact">Contact developer</string>
    <string name="tvappbar_settings">Settings</string>
    <string name="settings_darkmode">Dark mode</string>
    <string name="toast_notificationpermission">You have to grant notification permissions to receive Reminders</string>
    <string name="timepicker_am">AM</string>
    <string name="timepicker_pm">PM</string>
    <string name="notesfragment_entercityname">Enter city name</string>
    <string name="all_submit">Submit</string>
    <string name="all_cancel">Cancel</string>
    <string name="dialog_citytextinputtitle">Change city</string>
    <string name="dialog_currentlocationbtn">Current Location</string>
    <string name="settings_about">Roozane v2.0.0\nroozaneapp.ir</string>
    <string name="addnote_removereminder">Remove Reminder!</string>
    <string name="addnote_removereminderdesc">Are you sure to remove reminder for this note?</string>
    <string name="welcomedialog_title">Welcome to Daily 📝</string>
    <string name="welcomedialog_decription">With "Daily," you can make the most of your day and effortlessly manage tasks to achieve your goals. 🌟</string>
    <string name="welcomedialog_whatsnew">🎨 New UI\n🌙 Dark Mode\n☀️ Full Persian Calendar Support\n🚀 Application Performance Enhancement\n🔧 Fixing Reported Issues</string>
    <string name="welcomedialog_btncontinue">Continue</string>
    <string name="settings_themecolor">Theme color</string>
    <string name="savenotedialogdesc_addeditnotefragment">Note title should not be empty</string>
    <string name="gotit_all">Got it</string>
    <string name="pastTimeAlertMessage_addNoteFragment">You cannot set past time for reminder</string>
    <string name="nopermissiondialog_noteFragment">You may have to grant location services permission to update current location automatically or enter location name manually</string>
</resources>