<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Back_white"
    app:chainUseRtl="true"
    tools:context=".AddReadNote">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Back_white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_chevron_left"
                android:tint="@color/Second_black" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/reminderBtn"
                android:layout_toEndOf="@+id/back"
                android:gravity="start|center_vertical"
                android:textDirection="rtl"
                android:text="@string/write_note"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/delete"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_toStartOf="@+id/reminderBtn"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="18dp"
                app:srcCompat="@drawable/ic_trash_remove"
                android:tint="@color/Second_black" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/reminderBtn"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="18dp"
                app:srcCompat="@drawable/ic_bell"
                android:tint="@color/Second_black" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/titleEdtTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/title"
                    android:textColor="@color/Second_black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contentEdtTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/content"
                    android:textColor="@color/Second_black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/modifiedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modified"
                    android:layout_marginTop="@dimen/low_dp"
                    android:textColor="@color/Gray_c"
                    android:layout_gravity="end"
                    android:textSize="@dimen/low_TextSize" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/createdDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created"
                    android:textColor="@color/Gray_c"
                    android:layout_gravity="end"
                    android:textSize="@dimen/low_TextSize" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/AppShapeAppearance.SmallComponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:tint="@android:color/white"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_check" />


</androidx.constraintlayout.widget.ConstraintLayout>