<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/med_dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/Back_white"
        android:padding="@dimen/med_dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alertTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/med_TextSize"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/med_dp"
                    android:textColor="@color/Second_black"
                    android:gravity="center_vertical"/>



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alertSubtitle"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/Gray_c"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/med_dp"
                    android:layout_marginRight="@dimen/med_dp"
                    android:layout_marginBottom="@dimen/med_dp"
                    android:layout_marginStart="@dimen/med_dp"
                    android:layout_marginEnd="@dimen/med_dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/med_dp"
                android:layout_marginRight="@dimen/med_dp"
                android:layout_marginBottom="@dimen/med_dp"
                android:hint="@string/city_name"
                android:background="@null"
                android:maxLines="1"
                android:inputType="text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center"
                android:id="@+id/textInput"
                android:layout_marginEnd="@dimen/med_dp"
                android:layout_marginStart="@dimen/med_dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:background="@color/btn_grey"
                android:layout_marginRight="@dimen/med_dp"
                android:layout_marginLeft="@dimen/med_dp"
                android:layout_marginEnd="@dimen/med_dp"
                android:layout_marginStart="@dimen/med_dp" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/negative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/negativeBtnTxt"
                    android:textAllCaps="false"
                    android:textColor="@color/teal_500"
                    android:background="?selectableItemBackground"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/positive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/positiveBtnTxt"
                    android:textAllCaps="false"
                    android:textColor="@color/teal_500"
                    android:background="?selectableItemBackground" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</FrameLayout>