<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_settings_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/all_16dp"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/settings_themetv"
            android:textSize="@dimen/med_TextSize" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_settings_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/all_16dp"
            android:layout_marginTop="@dimen/all_8dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/view_background_primary"
            app:cardCornerRadius="@dimen/all_12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/all_8dp">

                <TextView
                    android:id="@+id/tv_settings_systemdefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/all_4dp"
                    android:text="@string/settings_systemdefault"
                    android:textSize="@dimen/low_TextSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_settings_defaultsystemtheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_settings_systemdefault"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_settings_systemdefault" />

                <TextView
                    android:id="@+id/tv_settings_darkmode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/all_8dp"
                    android:text="@string/settings_systemdefault"
                    android:textSize="@dimen/low_TextSize"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_settings_systemdefault"
                    tools:visibility="gone" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_settings_darkmode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/tv_settings_darkmode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_settings_darkmode"
                    tools:visibility="gone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_settings_reportandconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/all_16dp"
            android:layout_marginTop="@dimen/all_12dp"
            android:text="@string/settings_report"
            android:textSize="@dimen/med_TextSize" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_settings_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/all_16dp"
            android:layout_marginTop="@dimen/all_8dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/view_background_primary"
            app:cardCornerRadius="@dimen/all_12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/all_8dp">

                <TextView
                    android:id="@+id/tv_settings_reportbug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/all_12dp"
                    android:text="@string/settings_reportbug"
                    android:textSize="@dimen/low_TextSize"
                    android:textAlignment="viewStart"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/tv_settings_connect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/all_8dp"
                    android:paddingVertical="@dimen/all_12dp"
                    android:text="@string/settings_contact"
                    android:textSize="@dimen/low_TextSize"
                    android:textAlignment="viewStart"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_settings_reportbug"
                    android:focusable="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>