<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:padding="@dimen/med_dp"
        app:cardCornerRadius="@dimen/high_dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/alertTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/med_dp"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/Second_black"
                android:textSize="@dimen/med_TextSize"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout_time_dateTimePickerDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="64dp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alertTitle">

                <NumberPicker
                    android:id="@+id/numberPicker_hour_addNotesFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fadeScrollbars="true"
                    android:solidColor="@color/white" />

                <NumberPicker
                    android:id="@+id/numberPicker_minute_addNotesFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fadeScrollbars="true"
                    android:solidColor="@color/white" />

                <NumberPicker
                    android:id="@+id/numberPicker_amPm_addNotesFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fadeScrollbars="true"
                    android:solidColor="@color/white" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_positive_timePicker"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@color/white"
                android:elevation="0dp"
                android:shadowColor="@android:color/transparent"
                android:textColor="@color/black"
                app:elevation="0dp"
                app:iconTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_negative_timePicker"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_time_dateTimePickerDialog"
                android:text="@string/dialog_ok" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_negative_timePicker"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@color/white"
                android:elevation="0dp"
                android:shadowColor="@android:color/transparent"
                android:textColor="@color/black"
                app:elevation="0dp"
                app:iconTint="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/button_positive_timePicker"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_time_dateTimePickerDialog"
                android:text="@string/Dialog_cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>